--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"autoprefixer": "^10.2.6",
 		"cssnano": "^5.0.6",
 		"dotenv": "^10.0.0",
+		"encoding": "^0.1.13",
 		"eslint": "^7.22.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
