--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-netlify": "^1.0.0-next.25",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
 		"@tailwindcss/aspect-ratio": "^0.2.1",
@@ -17,19 +17,21 @@
 		"@tailwindcss/typography": "^0.4.1",
 		"airtable": "^0.11.1",
 		"autoprefixer": "^10.2.6",
-		"cssnano": "^5.0.6",
+		"cssnano": "^5.0.7",
 		"dotenv": "^10.0.0",
 		"encoding": "^0.1.13",
-		"eslint": "^7.22.0",
+		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
-		"postcss": "^8.3.5",
+		"invert-color": "^2.0.0",
+		"netlify-cli": "^6.0.8",
+		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
-		"prettier": "~2.2.1",
+		"prettier": "~2.3.2",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.34.0",
+		"svelte": "^3.41.0",
 		"svelte-preprocess": "^4.7.3",
-		"tailwindcss": "^2.2.4"
+		"tailwindcss": "^2.2.7"
 	},
 	"type": "module",
 	"dependencies": {}
