--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-	"name": "~TODO~",
+	"name": "Birdables",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
+		"deploy": "svelte-kit build && netlify deploy --prod -d=\"build\"",
 		"preview": "svelte-kit preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
@@ -17,20 +18,22 @@
 		"@tailwindcss/typography": "^0.4.1",
 		"airtable": "^0.11.1",
 		"autoprefixer": "^10.2.6",
-		"cssnano": "^5.0.7",
+		"cssnano": "^5.0.8",
 		"dotenv": "^10.0.0",
 		"encoding": "^0.1.13",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.1.0",
 		"eslint-plugin-svelte3": "^3.2.0",
 		"invert-color": "^2.0.0",
-		"netlify-cli": "^6.0.8",
+		"netlify-cli": "^6.6.1",
 		"postcss": "^8.3.6",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.3.2",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.41.0",
+		"svelte": "^3.42.1",
+		"svelte-intersection-observer": "^0.7.1",
 		"svelte-preprocess": "^4.7.3",
+		"svelte-seo": "^1.2.1",
 		"tailwindcss": "^2.2.7"
 	},
 	"type": "module",
