--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.3.2",
 		"prettier-plugin-svelte": "^2.2.0",
+		"stripe": "^8.178.0",
 		"svelte": "^3.42.1",
 		"svelte-intersection-observer": "^0.7.1",
 		"svelte-preprocess": "^4.7.3",
