--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/typography": "^0.4.1",
 		"airtable": "^0.11.1",
 		"autoprefixer": "^10.2.6",
+		"chance": "^1.1.8",
 		"cssnano": "^5.0.8",
 		"dotenv": "^10.0.0",
 		"encoding": "^0.1.13",
