--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
 		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
 		"@sveltejs/kit": "next",
-		"@tailwindcss/aspect-ratio": "^0.2.1",
-		"@tailwindcss/forms": "^0.3.3",
-		"@tailwindcss/typography": "^0.4.1",
+		"@tailwindcss/aspect-ratio": "^0.4.0",
+		"@tailwindcss/forms": "^0.4.0",
+		"@tailwindcss/line-clamp": "^0.3.0",
+		"@tailwindcss/typography": "^0.5.0",
 		"airtable": "^0.11.1",
-		"autoprefixer": "^10.2.6",
+		"autoprefixer": "^10.4.0",
 		"chance": "^1.1.8",
 		"cssnano": "^5.0.8",
 		"dotenv": "^10.0.0",
@@ -30,7 +31,7 @@
 		"eslint-plugin-svelte3": "^3.2.0",
 		"invert-color": "^2.0.0",
 		"netlify-cli": "^6.6.1",
-		"postcss": "^8.3.6",
+		"postcss": "^8.4.4",
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.3.2",
 		"prettier-plugin-svelte": "^2.2.0",
@@ -38,8 +39,7 @@
 		"svelte-intersection-observer": "^0.7.1",
 		"svelte-preprocess": "^4.7.3",
 		"svelte-seo": "^1.3.1",
-		"tailwindcss": "^2.2.7"
+		"tailwindcss": "^3.0.1"
 	},
-	"type": "module",
-	"dependencies": {}
+	"type": "module"
 }
