--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@sanity/image-url": "^1.0.1",
 		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
 		"@sveltejs/adapter-static": "^1.0.0-next.13",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.232",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.4.0",
 		"@tailwindcss/line-clamp": "^0.3.0",
@@ -35,11 +35,11 @@
 		"postcss-load-config": "^3.1.0",
 		"prettier": "~2.3.2",
 		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.42.6",
+		"svelte": "^3.46.2",
 		"svelte-intersection-observer": "^0.7.1",
 		"svelte-preprocess": "^4.7.3",
 		"svelte-seo": "^1.3.1",
-		"tailwindcss": "^3.0.1"
+		"tailwindcss": "^3.0.15"
 	},
 	"type": "module"
 }
