--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
 		"@portabletext/svelte": "^0.2.0",
 		"@sanity/client": "^2.21.10",
 		"@sanity/image-url": "^1.0.1",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.0",
-		"@sveltejs/adapter-static": "^1.0.0-next.26",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "^1.0.0-next.232",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.4.0",
