--- a/package.json
+++ b/package.json
@@ -12,33 +12,33 @@
 	},
 	"devDependencies": {
 		"@portabletext/svelte": "^0.2.0",
-		"@sanity/client": "^2.21.10",
+		"@sanity/client": "^3.3.0",
 		"@sanity/image-url": "^1.0.1",
-		"@sveltejs/adapter-vercel": "next",
-		"@sveltejs/kit": "^1.0.0-next.232",
+		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
+		"@sveltejs/kit": "^1.0.0-next.310",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
-		"@tailwindcss/forms": "^0.4.0",
-		"@tailwindcss/line-clamp": "^0.3.0",
-		"@tailwindcss/typography": "^0.5.0",
-		"airtable": "^0.11.1",
-		"autoprefixer": "^10.4.0",
+		"@tailwindcss/forms": "^0.5.0",
+		"@tailwindcss/line-clamp": "^0.3.1",
+		"@tailwindcss/typography": "^0.5.2",
+		"airtable": "^0.11.3",
+		"autoprefixer": "^10.4.4",
 		"chance": "^1.1.8",
-		"cssnano": "^5.0.8",
-		"dotenv": "^10.0.0",
+		"cssnano": "^5.1.7",
+		"dotenv": "^16.0.0",
 		"encoding": "^0.1.13",
-		"eslint": "^7.32.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-plugin-svelte3": "^3.2.0",
+		"eslint": "^8.13.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-svelte3": "^3.4.1",
 		"invert-color": "^2.0.0",
-		"postcss": "^8.4.4",
-		"postcss-load-config": "^3.1.0",
-		"prettier": "~2.3.2",
-		"prettier-plugin-svelte": "^2.2.0",
-		"svelte": "^3.46.2",
-		"svelte-intersection-observer": "^0.7.1",
-		"svelte-preprocess": "^4.7.3",
-		"svelte-seo": "^1.3.1",
-		"tailwindcss": "^3.0.15"
+		"postcss": "^8.4.12",
+		"postcss-load-config": "^3.1.4",
+		"prettier": "~2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.47.0",
+		"svelte-intersection-observer": "^0.10.0",
+		"svelte-preprocess": "^4.10.5",
+		"svelte-seo": "^1.4.0",
+		"tailwindcss": "^3.0.23"
 	},
 	"type": "module"
 }
