--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"name": "Birdables",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"deploy": "svelte-kit build && netlify deploy --prod -d=\"build\"",
-		"preview": "svelte-kit preview",
+		"dev": "vite dev",
+		"build": "vite build",
+		"deploy": "vite build && netlify deploy --prod -d=\"build\"",
+		"preview": "vite preview",
 		"lint": "prettier --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
@@ -15,7 +15,7 @@
 		"@sanity/client": "^3.3.0",
 		"@sanity/image-url": "^1.0.1",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
-		"@sveltejs/kit": "^1.0.0-next.310",
+		"@sveltejs/kit": "1.0.0-next.405",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.0",
 		"@tailwindcss/line-clamp": "^0.3.1",
@@ -38,7 +38,8 @@
 		"svelte-intersection-observer": "^0.10.0",
 		"svelte-preprocess": "^4.10.5",
 		"svelte-seo": "^1.4.0",
-		"tailwindcss": "^3.0.23"
+		"tailwindcss": "^3.0.23",
+		"vite": "^4.0.1"
 	},
 	"type": "module"
 }
