--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
+		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@portabletext/svelte": "^0.2.0",
 		"@sanity/client": "^3.3.0",
 		"@sanity/image-url": "^1.0.1",
 		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
-		"@sveltejs/kit": "1.0.0-next.405",
+		"@sveltejs/kit": "^1.0.1",
 		"@tailwindcss/aspect-ratio": "^0.4.0",
 		"@tailwindcss/forms": "^0.5.0",
 		"@tailwindcss/line-clamp": "^0.3.1",
