--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
 		"format": "prettier --write --plugin-search-dir=. ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0-next.90",
-		"@portabletext/svelte": "^0.2.0",
-		"@sanity/client": "^3.3.0",
+		"@portabletext/svelte": "^1.0.1",
+		"@sanity/client": "^3.4.1",
 		"@sanity/image-url": "^1.0.1",
-		"@sveltejs/adapter-vercel": "^1.0.0-next.47",
+		"@sveltejs/adapter-auto": "^1.0.0",
+		"@sveltejs/adapter-vercel": "^1.0.0",
 		"@sveltejs/kit": "^1.0.1",
-		"@tailwindcss/aspect-ratio": "^0.4.0",
-		"@tailwindcss/forms": "^0.5.0",
-		"@tailwindcss/line-clamp": "^0.3.1",
-		"@tailwindcss/typography": "^0.5.2",
-		"airtable": "^0.11.3",
-		"autoprefixer": "^10.4.4",
-		"chance": "^1.1.8",
-		"cssnano": "^5.1.7",
-		"dotenv": "^16.0.0",
+		"@tailwindcss/aspect-ratio": "^0.4.2",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/line-clamp": "^0.4.2",
+		"@tailwindcss/typography": "^0.5.8",
+		"airtable": "^0.11.6",
+		"autoprefixer": "^10.4.13",
+		"chance": "^1.1.9",
+		"cssnano": "^5.1.14",
+		"dotenv": "^16.0.3",
 		"encoding": "^0.1.13",
-		"eslint": "^8.13.0",
+		"eslint": "^8.30.0",
 		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^3.4.1",
+		"eslint-plugin-svelte3": "^4.0.0",
 		"invert-color": "^2.0.0",
-		"postcss": "^8.4.12",
-		"postcss-load-config": "^3.1.4",
-		"prettier": "~2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.47.0",
+		"postcss": "^8.4.20",
+		"postcss-load-config": "^4.0.1",
+		"prettier": "~2.8.1",
+		"prettier-plugin-svelte": "^2.9.0",
+		"svelte": "^3.55.0",
 		"svelte-intersection-observer": "^0.10.0",
-		"svelte-preprocess": "^4.10.5",
-		"svelte-seo": "^1.4.0",
-		"tailwindcss": "^3.0.23",
+		"svelte-preprocess": "^5.0.0",
+		"svelte-seo": "^1.4.1",
+		"tailwindcss": "^3.2.4",
 		"vite": "^4.0.1"
 	},
 	"type": "module"
