--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 		"tailwindcss": "^3.3.5",
 		"vite": "^5.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"engines": {
+		"node": "21.2.0"
+	}
 }
