--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/line-clamp": "^0.4.4",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.0.0",
 		"airtable": "^0.12.2",
 		"autoprefixer": "^10.4.21",
 		"chance": "^1.1.11",
@@ -41,7 +42,7 @@
 		"svelte-preprocess": "^6.0.3",
 		"svelte-seo": "^1.5.4",
 		"tailwindcss": "^4.1.11",
-		"vite": "^7.1.2"
+		"vite": "npm:rolldown-vite@latest"
 	},
 	"type": "module",
 	"engines": {
